ADD PONTODOCE PROJECT

--- a/index.html
+++ b/index.html
@@ -79,14 +79,13 @@
                     <!-- Example Project Card -->
                     <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
                         <div class="card">
-                            <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Project 1">
+                            <img src="img/PontoDoce.png" class="card-img-top" alt="Project Ponto Doce">
                             <div class="card-body">
-                                <h5 class="card-title text-content">Project 1</h5>
-                                <p class="card-text">Description of project 1. Highlighting the technologies used and
-                                    the problem it solves.</p>
-                                <button class="btn btn-transform font-sedan">
+                                <h5 class="card-title text-content">Ponto Doce</h5>
+                                <p class="card-text">This was a full-stack website developed for a fictional bakery to demonstrate the functionality of an application with Node.js, Express, and MongoDB. It includes complete CRUD operations and a database, as well as mobile responsiveness.</p>
+                                <a href="https://pi-exl4.onrender.com" class="btn btn-transform font-sedan">
                                     <span class="text">Take a View</span>
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
