Commented unnecessary cards

--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
             <div class="container">
                 <h2 class="display-4 text-content text-center">Portfolio</h2>
                 <div class="row mt-4">
-                    <!-- Example Project Card -->
                     <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
                         <div class="card">
                             <img src="img/PontoDoce.png" class="card-img-top" alt="Project Ponto Doce">
@@ -89,8 +88,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Repeat for additional projects -->
-                    <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
+  <!--                   <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
                         <div class="card">
                             <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Project 2">
                             <div class="card-body">
@@ -128,8 +126,7 @@
                                 </button>
                             </div>
                         </div>
-                    </div>
-                    <!-- Add more projects as needed -->
+                    </div> -->
                 </div>
             </div>
         </section>
